[package]
name = "guacr-vnc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VNC protocol handler for guacr remote desktop"

[dependencies]
# Local dependencies
guacr-handlers = { path = "../guacr-handlers" }
guacr-rdp = { path = "../guacr-rdp" }  # Reuse framebuffer

# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
bytes.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true

# VNC client
# TODO: Add vnc client crate when available

# Protocol parsing
guacr-protocol = { path = "../guacr-protocol" }

# Utilities
base64.workspace = true

# SFTP integration (optional)
guacr-sftp = { path = "../guacr-sftp", optional = true }
russh = { version = "0.46", optional = true }
russh-sftp = { version = "2.1", optional = true }
russh-keys = { version = "0.46", optional = true }

[features]
default = []
sftp = ["guacr-sftp", "russh", "russh-sftp", "russh-keys"]
