[package]
name = "guacr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Protocol handlers for remote desktop access (SSH, RDP, VNC, Telnet, Database protocols, RBI)"

[dependencies]
# Core handler traits and registry
guacr-handlers = { path = "../guacr-handlers", version = "1.1.7" }

# Re-export async_trait for EventCallback implementations
async-trait.workspace = true

# Protocol handlers
guacr-ssh = { path = "../guacr-ssh", version = "1.1.7", optional = true }
guacr-telnet = { path = "../guacr-telnet", version = "1.1.7", optional = true }
guacr-rdp = { path = "../guacr-rdp", version = "1.1.7", optional = true }
guacr-vnc = { path = "../guacr-vnc", version = "1.1.7", optional = true }
guacr-sftp = { path = "../guacr-sftp", version = "1.1.7", optional = true }
guacr-database = { path = "../guacr-database", version = "1.1.7", optional = true }
guacr-rbi = { path = "../guacr-rbi", version = "1.1.7", optional = true }

[features]
default = ["ssh", "telnet"]
ssh = ["guacr-ssh"]
telnet = ["guacr-telnet"]
rdp = ["guacr-rdp"]
vnc = ["guacr-vnc"]
sftp = ["guacr-sftp"]
database = ["guacr-database"]
rbi = ["guacr-rbi"]

# RBI backend options (require "rbi" feature)
# Chrome/CDP - uses installed Chrome via DevTools Protocol (no audio)
rbi-chrome = ["rbi", "guacr-rbi/chrome"]
# CEF - Chromium Embedded Framework with audio support (requires CEF binaries)
rbi-cef = ["rbi", "guacr-rbi/cef"]

# Enable guacd wire protocol compatibility (select/args/connect/ready handshake)
# This allows guacr to act as a drop-in replacement for guacd on TCP port 4822
guacd-compat = ["guacr-handlers/guacd-compat"]

all = ["ssh", "telnet", "rdp", "vnc", "sftp", "database", "rbi"]
# All handlers with Chrome/CDP for RBI (easy setup, no audio)
all-chrome = ["all", "rbi-chrome"]
# All handlers with CEF for RBI (requires CEF binaries, has audio)
all-cef = ["all", "rbi-cef"]
