[package]
name = "keeperdb-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "KeeperDB Proxy - Database protocol proxy with dynamic protocol detection and credential injection"

[[bin]]
name = "keeperdb-proxy"
path = "src/main.rs"

[lib]
name = "keeperdb_proxy"
crate-type = ["rlib"]

[features]
default = []
python = ["pyo3", "pyo3-log"]

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
rustls = { workspace = true }
futures = { workspace = true }
pyo3 = { workspace = true, optional = true }

# Query logging
guacr-recording = { path = "../guacr-recording" }
serde_json = { workspace = true }
bytes = { workspace = true }

# Crate-specific dependencies (workspace-level)
clap = { workspace = true }
serde_yaml = { workspace = true }
sha1 = { workspace = true }
md-5 = { workspace = true }
pbkdf2 = { workspace = true }
hmac = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
ed25519-dalek = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }
tracing-log = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }
pyo3-log = { workspace = true, optional = true }

# S3 transport for query logging
aws-sdk-s3 = "1.65"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
flate2 = "1.0"

[dev-dependencies]
static_assertions = "1.1"
tempfile = "3"
tokio-test = "0.4"
futures = { workspace = true }
