[package]
name = "keeper-pam-connections-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Unified Python bindings for Keeper PAM connection management"

[lib]
name = "keeper_pam_connections"
crate-type = ["cdylib"]

[dependencies]
# Depend on all workspace crates with python-support feature
keeper-pam-webrtc-rs = { path = "../keeper-pam-webrtc-rs", features = ["python-support"] }

# Python bindings
pyo3.workspace = true

# Database proxy
keeperdb-proxy = { path = "../keeperdb-proxy", features = ["python"] }

# Future crates can be added here:
# keeper-pam-ssh-rs = { path = "../keeper-pam-ssh-rs", features = ["python-support"] }
# keeper-pam-rdp-rs = { path = "../keeper-pam-rdp-rs", features = ["python-support"] }
