[package]
name = "keeper-pam-webrtc-rs-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Keeper PAM WebRTC Python bindings - WebRTC-based secure tunneling for Python"

[lib]
name = "keeper_pam_webrtc_rs"
crate-type = ["cdylib"]
doc = false

[dependencies]
webrtc-core = { package = "keeper-pam-webrtc-rs", path = "../keeper-pam-webrtc-rs", default-features = false, features = ["python-support"] }
pyo3 = { workspace = true }
